@@ -3,6 +3,7 @@
 	* Improved handling of storage pid, resolves #30
 	* Adapted all unit and functional tests to TYPO3 v8 and nimut/testing-framework
 	* Cleaned up the Importer class, resolves #25
+	* Switched to moment.js for date formatting in Log module, resolves #19
 
 2017-10-14 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
